--- a/Equipment_Manager/package.json
+++ b/Equipment_Manager/package.json
@@ -15,8 +15,10 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-picker-select": "^9.0.0",
     "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "@react-native-picker/picker": "2.4.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
