--- a/Equipment_Manager/package.json
+++ b/Equipment_Manager/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "expo": "~49.0.15",
@@ -18,7 +19,7 @@
     "react-native-picker-select": "^9.0.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "~3.22.0",
-    "@react-native-picker/picker": "2.4.10"
+    "react-native-uuid": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
