--- a/Equipment_Manager/package.json
+++ b/Equipment_Manager/package.json
@@ -9,16 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.5",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "expo": "~49.0.15",
+    "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-picker-select": "^9.0.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "~3.22.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-uuid": "^2.0.1"
   },
   "devDependencies": {
