--- a/myInventory/package.json
+++ b/myInventory/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "equipment_manager",
+  "name": "myinventory",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,18 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-picker/picker": "2.4.10",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/native": "^6.1.9",
-    "expo": "^49.0.20",
-    "expo-sqlite": "~11.3.3",
+    "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-picker-select": "^9.0.0",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "~3.22.0",
-    "react-native-uuid": "^2.0.1"
+    "react-native-navigation": "^7.37.1-hotfix.1",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
