--- a/BestFuel/app.json
+++ b/BestFuel/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.dev.csuzarte.BestFuel"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "a98e5a04-893e-4683-b57e-92607491664c"
+      }
     }
   }
 }
