--- a/BestFuel/app.json
+++ b/BestFuel/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "BestFuel",
     "slug": "BestFuel",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -19,6 +19,7 @@
     },
     "android": {
       "adaptiveIcon": {
+        "versionCode": 2,
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
